Application Endpoint with GET and POST methods

--- a/notebooks/Feature_Engineering.ipynb
+++ b/notebooks/Feature_Engineering.ipynb
@@ -17,24 +17,19 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "\n",
     "# Libraries importing\n",
-    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import joblib\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.model_selection import cross_val_score, cross_validate, train_test_split, RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "\n",
-    "from lightgbm import LGBMClassifier\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "from utils import model_evaluation\n"
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler"
    ]
   },
   {
@@ -57,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2436/3461338438.py:3: DtypeWarning: Columns (34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_5983/3461338438.py:3: DtypeWarning: Columns (34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(os.path.join('./data',\n"
      ]
     }
@@ -235,6 +230,89 @@
     "X_val_pre = preprocessor.transform(X=X_val)\n",
     "# Test data\n",
     "X_test_pre = preprocessor.transform(X=X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['../model/preprocessor.pkl']"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save preprocessor to a file\n",
+    "joblib.dump(preprocessor, '../model/preprocessor.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "preprocessor_loaded = joblib.load('../model/preprocessor.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "var = preprocessor_loaded.transform(X=X_train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(40500, 1096)"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_pre.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(40500, 1096)"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var.shape"
    ],
    "metadata": {
     "collapsed": false
